--- a/appyters/Gene_Network_Analysis/appyter.json
+++ b/appyters/Gene_Network_Analysis/appyter.json
@@ -11,7 +11,11 @@
     }
   ],
   "url": "https://github.com/MaayanLab/appyter-catalog",
-  "tags": ["Enrichment Analysis", "Genes", "Clsutering", "Enrichr"],
+  "tags": [
+    "Enrichment Analysis",
+    "Enrichr",
+    "Network Analysis"
+  ],
   "license": "MIT",
   "image": "thumbnail.png",
   "appyter": {
